<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!--顶部的按钮（文字）75dip-->
    <RelativeLayout
        android:id="@+id/top_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ToggleButton
                android:id="@+id/back_btn"
                android:layout_width="48dip"
                android:layout_height="48dip"
                android:layout_alignParentLeft="true"
                android:textOff=""
                android:textOn=""
                android:visibility="visible"
                android:checked="false"
                android:background="@drawable/btn_back_black_white"
                />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dip"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/hlpe"
                />



        </RelativeLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dip">

            <TextView
                android:id="@+id/help_explanation_desc_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_explanation_desc"
                android:textSize="15dip"
                android:textColor="@color/help_title_view_bg_color"
                />
            <TextView
                android:id="@+id/image_simple_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_image_simple"
                android:textSize="15dip"
                android:textColor="@color/help_title_view_bg_color"
                android:layout_below="@+id/help_explanation_desc_tv"
                android:layout_marginTop="35dip"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_simple_tv"
                android:layout_centerHorizontal="true">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dip"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/code_clear_img"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_clear"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/help_title_view_bg_color"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dip"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/code_blurry_img"/>
                            <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_blurry"
                            android:layout_gravity="center_horizontal"
                                android:textColor="@color/help_title_view_bg_color"
                                />
                    </LinearLayout>

            </LinearLayout>
    </RelativeLayout>

</LinearLayout>